chore: publish kotlin jimmer Scaffold
Source-Commit: a5414566d6a4ca6a238dd5c177babde7e9c821d4
Generator-Version: 3.0.0
Recipe-SHA256: 23ff104862a930c0c479476f78f38d1246210be4a22ff2e13a29e7c364221567
Catalog-Schema: 1
Catalog-Version: 8
Catalog-MJGA-Version: 3.0.0
Catalog-SHA256: ed60b34a1bcbdfd1ebe86ca211af90486c6536b77dac166cff1ef767841531b0